--- a/src/Routes/Support/Support.module.css
+++ b/src/Routes/Support/Support.module.css
@@ -2,14 +2,22 @@
   direction: rtl;
   padding: 2rem;
 }
-.contact{
+.contact {
   display: flex;
-  
+  flex-direction: column;
 }
 .contact a {
   font-size: 18px;
   color: var(--primary-color);
-  margin: 10px 0;
+  margin: 5px 0;
+}
+.contact a:hover i {
+  color: var(--secondary-color);
+}
+.contact i {
+  margin: 0 10px;
+  transition-property: color;
+  transition-duration: 0.3s;
 }
 
 .form {
@@ -61,8 +69,28 @@
   cursor: pointer;
   align-self: flex-start;
   transition: background-color 0.3s;
+  -webkit-transition: background-color 0.3s;
+  -moz-transition: background-color 0.3s;
+  -ms-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
 }
 
 .button:hover {
   background-color: #d9e9ff;
+}
+@media screen and (max-width: 991px) {
+  .info{
+    order: -1;
+  }
+  .contact {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .contact h2{
+    display: none;
+
+  
+  }
 }
