--- a/src/Component/AboutSection/AboutSection.module.css
+++ b/src/Component/AboutSection/AboutSection.module.css
@@ -1,7 +1,5 @@
 .aboutSection {
   padding: 3rem 1rem;
-  direction: rtl;
-  text-align: right;
 }
 
 .container {
@@ -31,7 +29,6 @@
 
 .heading {
   color: var(--secondary-color);
-  text-align: right;
   font-size: 60px;
   font-weight: 700;
   line-height: 80px; /* 133.333% */
@@ -67,7 +64,11 @@
   margin-left: 0.5rem;
   color: #f4a424;
 }
-
+.aboutSection a {
+  transition-property: transform, background-color;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+}
 .statistics {
   display: flex;
   gap: 2rem;
@@ -81,7 +82,7 @@
   max-width: 30%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
   border-left: 3px solid #384bff;
-  background:  #eff3ff;
+  background: #eff3ff;
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
 }
 
