--- a/src/Component/Ui/Heading/Heading.module.css
+++ b/src/Component/Ui/Heading/Heading.module.css
@@ -38,8 +38,27 @@
   text-decoration: none;
 }
 
-@media screen and (max-width: 991px) {
+/* Extra mobile handling */
+@media (max-width: 991px) {
   .heading {
-    font-size: 36px;
+    width: 100%;
+    font-size: 28px;
+    padding: 1.5rem 1rem;
   }
+
+  .heading h2 {
+    line-height: 1.3;
+  }
+
+  .heading p {
+    line-height: 1.5;
+  }
+
+  .arrow {
+    font-size: 0.9rem;
+  }
+  .heading a {
+    font-size: 0.7em;
+  }
+  
 }
