--- a/src/Component/Ui/TextInput/TextInput.module.css
+++ b/src/Component/Ui/TextInput/TextInput.module.css
@@ -29,11 +29,13 @@
   transition-property: border, box-shadow;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
+  border-bottom: transparent 3px solid;
+
 }
 .input:focus,
 .input:focus-within,
 .input:focus-visible {
-  border-bottom: var(--primary-color) 1px solid;
+  border-bottom-color: var(--primary-color);
   outline: none;
   box-shadow: 0 0 0 0.25rem #2645a25e !important;
 }
