--- a/src/Component/Ui/Textarea/Textarea.module.css
+++ b/src/Component/Ui/Textarea/Textarea.module.css
@@ -29,8 +29,7 @@
   transition-property: border, box-shadow;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
-}
-.textarea {
+  border-bottom: transparent 3px solid;
   min-height: 120px;
   resize: none;
   line-height: 1.5;
@@ -39,7 +38,7 @@
 .textarea:focus,
 .textarea:focus-within,
 .textarea:focus-visible {
-  border-bottom: var(--primary-color) 1px solid;
+  border-bottom-color: var(--primary-color);
   outline: none;
   box-shadow: 0 0 0 0.25rem #2645a25e !important;
 }
