--- a/src/Component/SolutionCard/SolutionCard.module.css
+++ b/src/Component/SolutionCard/SolutionCard.module.css
@@ -19,10 +19,12 @@ body[dir="ltr"] .cardContainer:nth-child(odd) {
 
 .imageWrapper {
   text-align: center;
+  overflow: hidden;
 }
 .imageWrapper img {
   object-fit: cover;
   width: 100%;
+  max-height: 500px;
 }
 .cardContainer h3 {
   color: var(--primary-color);
