Refactor code structure for improved readability and maintainability

--- a/src/Component/Testimonials/Testimonials.module.css
+++ b/src/Component/Testimonials/Testimonials.module.css
@@ -14,3 +14,10 @@
             white 50%,
             transparent 100%);
 }
+
+.Testimonials :global(.swiper-button-prev),
+.Testimonials :global(.swiper-button-next),
+.Testimonials :global(.swiper-pagination-bullets) {
+    display: none !important;
+
+}
