--- a/src/Component/ArticleCard/ArticleCard.module.css
+++ b/src/Component/ArticleCard/ArticleCard.module.css
@@ -72,6 +72,7 @@
   flex-wrap: wrap;
   margin-bottom: 8px;
 }
+
 .meta i {
   color: var(--primary-color);
 }
@@ -87,6 +88,11 @@
   line-height: 1.7;
   margin-bottom: 12px;
   color: #333;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .link {
@@ -94,6 +100,10 @@
   font-weight: bold;
   text-decoration: none;
   transition: color 0.2s;
+  -webkit-transition: color 0.2s;
+  -moz-transition: color 0.2s;
+  -ms-transition: color 0.2s;
+  -o-transition: color 0.2s;
 }
 
 .link:hover {
