--- a/src/Component/ServiceCard/ServiceCard.module.css
+++ b/src/Component/ServiceCard/ServiceCard.module.css
@@ -28,20 +28,29 @@
   -ms-transform: translateY(-5px) scale(1.03) !important;
   -o-transform: translateY(-5px) scale(1.03) !important;
 }
+
 .content {
   padding: 16px 20px;
 }
+
 .title {
   color: #0f0d1d;
   font-weight: 700;
   font-size: 24px;
   line-height: 100%;
 }
+
 .description {
   color: var(--primary-color);
   font-weight: 400;
   font-size: 16px;
-  line-height: 100%;
+  line-height: 1.2;
+  /* Adjusted to improve readability */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .link {
@@ -54,12 +63,12 @@
 .link:hover {
   color: #d48800;
 }
+
 .imageWrapper {
   width: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
-
   margin: 0px 15px;
   border-radius: 20px;
   background: linear-gradient(135deg, transparent 30%, #f3f7fb 30%);
@@ -68,7 +77,8 @@
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
 }
+
 .imageWrapper img {
-  width: 90px;
+  width: 75%;
   aspect-ratio: 1/ 1;
 }
