--- a/src/Component/SolutionCard/SolutionCard.module.css
+++ b/src/Component/SolutionCard/SolutionCard.module.css
@@ -1,6 +1,7 @@
 .cardContainer {
   background: linear-gradient(90deg, var(--lite) 70%, transparent 30%);
 }
+
 .cardContainer:nth-child(odd) {
   background: linear-gradient(-90deg, var(--lite) 70%, transparent 30%);
 }
@@ -21,24 +22,41 @@ body[dir="ltr"] .cardContainer:nth-child(odd) {
   text-align: center;
   overflow: hidden;
 }
+
 .imageWrapper img {
   object-fit: cover;
   width: 100%;
   max-height: 500px;
 }
+
 .cardContainer h3 {
   color: var(--primary-color);
   font-size: 32px;
   font-weight: 700;
-  line-height: 32px; /* 100% */
+  line-height: 32px;
+  /* 100% */
   text-transform: capitalize;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
+
 .cardContainer p {
   color: var(--Text-color);
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 }
+
 .cardContainer a {
   width: fit-content;
   transition: all ease-in-out 0.3s;
