--- a/src/Routes/ServiceDetails/ServiceDetails.module.css
+++ b/src/Routes/ServiceDetails/ServiceDetails.module.css
@@ -4,7 +4,7 @@
   padding-top: 0;
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
+  justify-content: start;
   gap: 13px;
   border-radius: 15px;
   -webkit-border-radius: 15px;
