--- a/src/Routes/Support/Support.module.css
+++ b/src/Routes/Support/Support.module.css
@@ -1,18 +1,22 @@
 .supportSection {
- padding: 2rem;
+  padding: 2rem;
 }
+
 .contact {
   display: flex;
   flex-direction: column;
 }
+
 .contact a {
   font-size: 18px;
   color: var(--primary-color);
   margin: 5px 0;
 }
+
 .contact a:hover i {
   color: var(--secondary-color);
 }
+
 .contact i {
   margin: 0 10px;
   transition-property: color;
@@ -29,15 +33,26 @@
 
 
 @media screen and (max-width: 991px) {
+  .supportSection {
+   padding: 0
+  }
+
   .info {
     order: -1;
   }
+
   .contact {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
+    /* justify-content: space-between; */
+    gap: 10px;
   }
+  .contact a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .contact h2 {
     display: none;
   }
