--- a/src/Component/Footer/Footer.module.css
+++ b/src/Component/Footer/Footer.module.css
@@ -136,6 +136,9 @@ body[dir="ltr"] .footer-title::after {
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
 }
+.email-desc{
+  color: rgba(255, 255, 255, 0.7);
+}
 
 body[dir="ltr"] .email-submit {
   left: auto;
