--- a/src/Routes/ServiceDetails/ServiceDetails.module.css
+++ b/src/Routes/ServiceDetails/ServiceDetails.module.css
@@ -36,6 +36,8 @@
   position: sticky;
   background-color: var(--lite);
   top: 0;
+  /* bottom: 90%; */
+  margin: 15px 0 !important;
   padding: 15px 0;
   border-bottom: white 2px solid;
 
@@ -70,12 +72,19 @@
 
 .imageWrapper {
   width: 100%;
-  max-height: 300px;
+  max-height: 400px;
   min-height: 250px;
+  border-radius: 15px;
+  overflow: hidden;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 
 .imageWrapper img {
   width: 100%;
+  object-fit: cover;
 }
 
 .info h4 {
@@ -89,9 +98,8 @@
 
 .info p {
   font-weight: 400;
-  font-size: 32px;
+  font-size: 28px;
   line-height: 48px;
-  text-transform: capitalize;
   color: var(--text);
 }
 
@@ -109,10 +117,21 @@
     -o-border-radius: 0;
   }
 
+  .info p {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
 }
 
 @media screen and (max-width: 600px) {
   .indexingPart {
     width: 70%;
   }
+
+  .info p {
+    font-size: 18px;
+    line-height: 20px;
+  }
+
 }
