--- a/src/Component/Ui/Heading/Heading.module.css
+++ b/src/Component/Ui/Heading/Heading.module.css
@@ -13,6 +13,7 @@
   font-size: 1.5em;
   font-weight: 700;
   line-height: 80px; /* 133.333% */
+  text-align: center;
 }
 .heading p {
   color: #eff3ff;
