--- a/src/Routes/AboutUs/AboutUs.module.css
+++ b/src/Routes/AboutUs/AboutUs.module.css
@@ -1,11 +1,19 @@
 .info p {
   font-weight: 400;
   font-size: clamp(20px, 5vw, 32px);
+  color: var(--desc-text-color);
   line-height: 1.5;
   text-transform: capitalize;
   text-align: center;
   margin: 0 auto;
   max-width: 800px;
+}
+.info a{
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 .content h3 {
   color: var(--primary-color);
@@ -28,7 +36,7 @@
 .content p {
   font-weight: 400;
   line-height: 32px;
-  color: #333333;
+  color: var(--desc-text-color);
 }
 .branches h3 {
   color: var(--primary-color);
