--- a/src/Component/Ui/H3/H3.module.css
+++ b/src/Component/Ui/H3/H3.module.css
@@ -9,7 +9,7 @@
   transition-duration: 0.4s;
   transition-timing-function: ease-in-out;
 }
-.heading::after {
+/* .heading::after {
   content: "";
   display: block;
   width: 0;
@@ -34,4 +34,4 @@
 }
 .heading:hover {
   color: white;
-}
+} */
