--- a/src/Component/Ui/NavbarTop/NavbarTop.module.css
+++ b/src/Component/Ui/NavbarTop/NavbarTop.module.css
@@ -29,7 +29,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+/* 
 .navbar-top .phone-email a::after {
   content: "";
   display: block;
@@ -53,7 +53,7 @@
 .navbar-top .phone-email a:hover::after {
   width: 100%;
   background: var(--secondary-color);
-}
+} */
 
 .social-link {
   display: flex;
