--- a/src/Component/SolutionCard/SolutionCard.module.css
+++ b/src/Component/SolutionCard/SolutionCard.module.css
@@ -22,6 +22,11 @@ body[dir="ltr"] .cardContainer:nth-child(odd) {
   text-align: center;
   overflow: hidden;
   width: 80%;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 .imageWrapper img {
