--- a/src/Component/WhatWeAreDoing/WhatWeAreDoing.module.css
+++ b/src/Component/WhatWeAreDoing/WhatWeAreDoing.module.css
@@ -2,7 +2,6 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    text-align: center;
     padding: 2rem 1rem;
 }
 
@@ -34,7 +33,6 @@
 }
 
 .imageWrapper {
-    position: relative;
     width: 100%;
     height: 230px;
     overflow: hidden;
@@ -48,8 +46,8 @@
 
 .iconBadge {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    bottom: 100%;
+    right: 10px;
     background: #2a49ff;
     color: white;
     text-align: center;
@@ -60,9 +58,11 @@
 }
 
 .content {
+    position: relative;
     padding: 16px 20px;
     text-align: start;
     display: flex;
+    background-color: var(--eff3ff);
     flex-direction: column;
     gap: 13px;
 }
@@ -81,9 +81,9 @@
     margin-bottom: 12px;
 }
 
-.description {
+p.description {
     font-weight: 400;
-    font-size: 1rem;
+    font-size: 20px;
     line-height: 1.5;
     color: var(--Text-color);
     display: -webkit-box;
@@ -111,6 +111,11 @@
     font-weight: 700;
     font-size: 1rem;
     line-height: 1.5;
+}
+
+.info .iconWrapper {
+    width: 40px;
+    height: 40px
 }
 
 /* ---------------- Responsive Enhancements ---------------- */
@@ -169,9 +174,21 @@
 
     .info h5 {
         font-size: 0.7rem;
+        margin-bottom: 3px;
     }
 
     .info span {
         font-size: 0.5rem;
+    }
+
+    .info .iconWrapper {
+        margin: 0 3px !important;
+        width: 15px;
+        height: 15px;
+        padding: 3px;
+    }
+
+    .info .iconWrapper i {
+        font-size: 0.6rem;
     }
 }
