--- a/src/Component/AboutSection/AboutSection.module.css
+++ b/src/Component/AboutSection/AboutSection.module.css
@@ -110,7 +110,6 @@
   border: 2px solid var(--primary-color);
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
-  color: var(--desc-text-color);
   background-color: #eff3ff;
 }
 
@@ -130,6 +129,11 @@
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+}
+
+.logoContainer img {
+  width: 100%;
+  object-fit: cover;
 }
 
 /* ---------------- Responsive Enhancements ---------------- */
@@ -187,7 +191,7 @@
   }
 
   .logoPartner {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
   }
 }
