--- a/src/Component/Hero/Hero.module.css
+++ b/src/Component/Hero/Hero.module.css
@@ -162,3 +162,32 @@ h1 {
     margin: 0 auto;
   }
 }
+
+@media (max-width: 400px) {
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .heroDescription {
+    font-size: 1rem;
+    line-height: 1.4;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+
+  .decroImage {
+    display: none;
+  }
+
+  .btnContainer {
+    width: 100%;
+    margin: auto;
+  }
+
+  .btnContainer * {
+    font-size: 0.5rem;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
