--- a/src/Component/Ui/Heading/Heading.module.css
+++ b/src/Component/Ui/Heading/Heading.module.css
@@ -8,32 +8,39 @@
   width: 90%;
   margin: 15px auto;
 }
+
 .heading h2 {
   color: #eff3ff;
   font-size: 1.5em;
   font-weight: 700;
-  line-height: 80px; /* 133.333% */
+  line-height: 80px;
+  /* 133.333% */
   text-align: center;
 }
+
 .heading p {
   color: #eff3ff;
 
   text-align: center;
   font-size: 0.9em;
   font-weight: 400;
-  line-height: 60px; /* 200% */
+  line-height: 60px;
+  /* 200% */
 }
+
 .arrow {
   color: var(--secondary-color);
   margin: 0 1rem;
   font-size: 0.4em;
 }
+
 .heading a {
   color: #eff3ff;
   font-size: 0.5em;
   font-weight: 700;
 }
-.heading .arrow + a {
+
+.heading .arrow+a {
   color: var(--secondary-color);
   font-weight: 600;
   text-decoration: none;
@@ -58,8 +65,34 @@
   .arrow {
     font-size: 0.9rem;
   }
+
   .heading a {
     font-size: 0.7em;
   }
-  
+
+}
+
+@media (max-width: 400px) {
+  .heading {
+    font-size: 18px;
+    padding: 1rem 0.5rem;
+    text-align: center;
+  }
+
+  .heading h2 {
+    line-height: 1.3;
+  }
+
+  .heading p {
+    line-height: 1.5;
+  }
+
+  .arrow {
+    font-size: 0.9rem;
+  }
+
+  .heading a {
+    font-size: 0.6em;
+  }
+
 }
