feat: Implement lazy loading for components and optimize image loading with 'loading=lazy' attribute

--- a/src/Routes/Error404/Error404.module.css
+++ b/src/Routes/Error404/Error404.module.css
@@ -1,6 +1,7 @@
 .container {
   background-color: #141019;
   background: radial-gradient(at 50% -20%, #898ed1, var(--primary-color)) fixed;
+  position: relative;
 }
 
 #handboy {
