--- a/src/Routes/SolutionDetails/SolutionDetails.module.css
+++ b/src/Routes/SolutionDetails/SolutionDetails.module.css
@@ -7,13 +7,15 @@
   color: var(--primary-color);
   font-weight: 700;
   font-size: 60px;
-  line-height: 100%;
+  line-height: 1.3;
   text-transform: capitalize;
 }
 
 .info p {
   font-weight: 400;
-  line-height: 32px;
+  margin: 20px 0 0;
+  font-size: 20px;
+  line-height: 1.5;
   color: var(--Text-color);
 }
 
@@ -54,6 +56,7 @@
   }
 
   .cardContainer div {
-    order: unset; /* Reset order on small screens if needed */
+    order: unset;
+    /* Reset order on small screens if needed */
   }
 }
