--- a/src/Routes/SolutionDetails/SolutionDetails.module.css
+++ b/src/Routes/SolutionDetails/SolutionDetails.module.css
@@ -11,7 +11,7 @@
   text-transform: capitalize;
 }
 
-.info p {
+.info .desc {
   font-weight: 400;
   margin: 20px 0 0;
   font-size: 20px;
@@ -25,7 +25,7 @@
     font-size: 48px;
   }
 
-  .info p {
+  .info .desc {
     line-height: 28px;
   }
 }
@@ -35,7 +35,7 @@
     font-size: 36px;
   }
 
-  .info p {
+  .info .desc {
     line-height: 24px;
     font-size: 16px;
   }
@@ -46,7 +46,7 @@
     font-size: 28px;
   }
 
-  .info p {
+  .info .desc {
     line-height: 22px;
     font-size: 14px;
   }
