--- a/src/Component/Ui/H2/H2.module.css
+++ b/src/Component/Ui/H2/H2.module.css
@@ -1,4 +1,5 @@
 .container {
+  --heading-color-H2-component: var(--primary-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,7 +17,7 @@
   max-width: 100px;
   background: linear-gradient(90deg,
       transparent 0%,
-      var(--primary-color) 50%,
+      var(--heading-color-H2-component) 50%,
       transparent 100%);
   margin: 0;
 }
@@ -24,7 +25,7 @@
 .heading {
   font-size: 1.8rem;
   font-weight: 600;
-  color: var(--primary-color);
+  color: var(--heading-color-H2-component);
   margin: 0;
   white-space: nowrap;
   padding: 0 1rem;
@@ -32,7 +33,7 @@
 }
 
 .arrow {
-  color: var(--primary-color);
+  color: var(--heading-color-H2-component);
   font-size: 1.2rem;
   margin: 0;
 }
