--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,159 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&display=swap");
+
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* Global coloring  */
+  --primary-color: #2644a2;
+  --secondary-color: #e49d23;
+  --primary-color-hover: #1e3a8a;
+  --bg-color: #fff;
+  --lite: #e0f2fe;
+  --Text-color: #082f49;
+  --desc-text-color: #333333;
+
+  /* Footer */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  /* Global Coloring */
+  --primary-color: #1444d4;
+  --bg-color: #1d242e;
+  --Text-color: #20a4fc;
+  --desc-text-color: #e2e2e2;
+
+
+
+
 }
 
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  font-family: "IBM Plex Sans Arabic", sans-serif;
+  background-color: var(--bg-color);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: inherit;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+button {
+  transition-property: background-color, color, scale !important;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+}
+
+button:active {
+  scale: 0.9;
+}
+
+button:disabled {
+  cursor: not-allowed;
+  background-color: gray;
+  color: white;
+}
+
+button:disabled:hover {
+  background-color: gray !important;
+  color: white !important;
+}
+
+.btn-web {
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.btn-web:active {
+  scale: 0.9;
+}
+
+.btn-web-secondary {
+  background-color: var(--secondary-color);
+  color: #fff;
+  border: 1px solid var(--secondary-color);
+}
+
+.btn-web-secondary:hover {
+  background-color: transparent;
+  color: var(--secondary-color);
+}
+
+/* 
+////////////////override swal ////////////
+ */
+.swal2-confirm {
+  background-color: var(--secondary-color);
+  color: #fff;
+  border: 1px solid var(--secondary-color);
+}
+
+.swal2-confirm:hover {
+  background-color: transparent;
+  color: var(--secondary-color);
+}
+
+/* 
+//////////selection///////////
+*/
+::selection {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+/* 
+//////////scrollbar///////////
+*/
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px !important;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 10000;
+  /* height: 100vh; */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-color-hover);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: var(--primary-color-hover);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--bg-color);
+  border-radius: 10px;
+  margin: -10px 0px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
